<resources>
    <string name="app_name">Skip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_category">Create new Category</string>
    <string name="action_sub_category">Create new Subcategory</string>
    <string name="action_service">Create new Service</string>
    <string name="action_provider">Create new Provider</string>
    <string name="action_admin">Create new Admin</string>
    <string name="action_ads">Create new Ads</string>
    <string name="sign_out">Sign out</string>

    <string name="menu_home">Home</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_help">Help</string>
    <string name="menu_wallet">My Wallet</string>
    <string name="menu_account_settings">Account Settings</string>
    <string name="menu_register_as_service_provider">Register As Service Provider</string>
    <string name="menu_faqs">FAQS</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_show_more">More</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_as_company">Register as company</string>
    <string name="have_account">Have account</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="no_account">No account</string>
    <string name="title_activity_company">CompanyActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--<string name="places_api_key" translatable="false">AIzaSyA43MJKhE6bs_71GviN0xQgEDp_1rdXx4w</string>-->
    <string name="places_api_key" translatable="false">AIzaSyBAkRhPT1E-VwLUh0wO7NsXaBJHlUstp_Y</string>


</resources>