<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_category"
        android:title="@string/action_category"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_service"
        android:title="@string/action_service"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_provider"
        android:title="@string/action_provider"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_admin"
        android:title="@string/action_admin"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_ads"
        android:title="@string/action_ads"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_sign_out"
        android:title="@string/sign_out"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>