<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <!--<item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_wallet" />-->
        <item
            android:id="@+id/nav_account_settings"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_account_settings" />
        <item
            android:id="@+id/nav_register_as_provider"
            android:icon="@drawable/ic_baseline_corporate_fare_24"
            android:title="@string/menu_register_as_service_provider" />
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_baseline_question_answer_24"
            android:title="@string/menu_faqs" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about_us" />
    </group>
    <!--<group android:checkableBehavior="single">
        <item android:title="Share the app">

        </item>
    </group>-->
</menu>